--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -72,7 +72,7 @@
     width: 11px;
     height: 19px;
 
-    background-image: url("img/arrow.svg");
+    background-image: url("../img/arrow.svg");
     background-repeat: no-repeat;
     background-size: contain;
     transform: rotate(90deg);
