--- a/scss/blocks/about.scss
+++ b/scss/blocks/about.scss
@@ -158,7 +158,7 @@
       top: calc(50% - 5px);
     }
 
-    span {
+    span:not(.about__icon) {
       display: inline-block;
       width: calc(100% - 70px);
 
